Bug 451256. Fire DOMTitleChanged when a new document loads, even if it has no title. r+sr=jst